--- a/projects/youtube(clone)/style.css
+++ b/projects/youtube(clone)/style.css
@@ -2,7 +2,7 @@
 :root {
     /* Color */
     --white-color: #fff;
-    --black-color: #140a00;
+    --black-color: #0f0f0f;
     --blue-color: #045fd4;
     --red-color: #ff0000;
     --grey-dark-color: #909090;
@@ -18,6 +18,7 @@
     --font-medium: 14px;
     --font-small: 12px;
     --font-micro: 10px;
+    --font-actions: 16px;
 }
 
 * {
@@ -30,12 +31,13 @@ body {
     font-family: Roboto;
 }
 
-ul {
+ul, li {
     list-style: none;
 }
 
 button,
 button:focus {
+    background-color: var(--white-color);
     border: none;
     cursor: pointer;
     outline: none;
@@ -69,13 +71,14 @@ header .icons .fa-search{
     text-align: center;
     background-color: var(--black-color);
 }
+
 .player video {
     width: 100%;
     height: 100%;
-    max-width: 1000px;
+    max-width: 940px;
 }
 
-.info {
+body > .info {
     padding: var(--padding);
 }
 
@@ -91,24 +94,148 @@ header .icons .fa-search{
 
 .info .metadata .titleAndButton {
     display: flex;
-
 }
 
-.info .metadata .titleAndButton. title{
+.info .metadata .titleAndButton .title{
     font-size: var(--font-medium);
+    margin-right: var(--padding);
+}
+
+.info .metadata .titleAndButton .title.clamp {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     overflow: hidden;
-    margin-right: var(--padding);
 }
 
 .info .metadata .titleAndButton .moreBtn {
     height : 100%;
+    transition: transform 150ms ease-in-out;
 
 }
 
-.info .views {
+.info .metadata .titleAndButton .moreBtn.cliked {
+    transform: rotate(180deg);
+}
+
+
+.info .metadata .views {
     font-size: var(--font-small);
     color: var(--grey-dark-color);
+}
+
+.info .actions {
+    display: flex;
+    justify-content: space-around;
+    margin: var(--padding) 0;
+}
+
+.info .actions button {
+    display: flex;
+    flex-flow: column;
+    font-size: var(--font-small);
+}
+
+.info .actions button i {
+    margin: 0 auto;
+    margin-bottom: calc(var(--padding)/2); /* 16/2 = 8, Overriding */
+    font-size: var(--font-actions);
+    color: var(--grey-dark-color);
+}
+
+.info .actions button i.active {
+    color: var(--blue-color);
+}
+
+/* Channel Description */
+.info .channel {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid var(--grey-light-color);
+    border-bottom: 1px solid var(--grey-light-color);
+}
+
+.info .channel .metadata {
+    display: flex;
+    align-items: center;
+}
+
+.info .channel .metadata img {
+    width: var(--avatar-size);
+    height: var(--avatar-size);
+    border-radius: 50%;
+}
+
+.info .channel .metadata .info {
+    display: flex;
+    flex-flow: column;
+}
+
+.info .channel .metadata .info .name {
+    font-size: var(--font-medium);
+}
+
+.info .channel .metadata .info .subscribers {
+    font-size: var(--font-small);
+    color: var(--grey-dark-color);
+}
+
+.info .channel .subscribe {
+    text-transform: uppercase;
+    color: var(--red-color);
+    font-size: var(--font-medium);
+}
+
+/* Up Next */
+.upNext {
+    padding: 0 var(--padding);
+}
+
+.upNext > .title {
+    font-size: var(--font-medium);
+    color: var(--grey-dark-color);
+    margin-bottom: calc(var(--padding) / 2);
+}
+
+.upNext .item {
+    display: flex;
+    margin-top: var(--padding);
+}
+
+.upNext .item .img {
+    flex: 1 1 25%;
+    margin-right: var(--padding);
+}
+
+.upNext .item .img img {
+    width: 100%;
+}
+
+.upNext .item .info {
+    flex: 1 1 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.upNext .item .moreBtn {
+    height: 100%;
+    flex: 1 1 5%;
+}
+
+.upNext .item .info .name,
+.upNext .item .info .views {
+    font-size: var(--font-micro);
+    color: var(--grey-dark-color);
+}
+
+.infoAndUpNext {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+    .infoAndUpNext {
+        flex-direction: row;
+        margin: var(--padding);
+    }    
 }
