--- a/projects/JS_Lecture/10000hours.css
+++ b/projects/JS_Lecture/10000hours.css
@@ -1,38 +1,41 @@
 @font-face {
-  font-family: 'OTEnjoystoriesBA';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff') format('woff');
+  font-family: "OTEnjoystoriesBA";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'GmarketSansBold';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
+  font-family: "GmarketSansBold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'GmarketSansMedium';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Noto Sans KR';
+  font-family: "Noto Sans KR";
   font-style: normal;
   font-weight: 400;
-  src: url("https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2") format('woff2'),
-  url("https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff") format('woff'),
-  url("https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf") format('opentype');
+  src: url("https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2")
+      format("woff2"),
+    url("https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff")
+      format("woff"),
+    url("https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf")
+      format("opentype");
 }
 
 /* 회전 애니메이션 선언 */
 @keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
   100% {
     transform: rotate(360deg);
   }
@@ -40,9 +43,11 @@
 
 html,
 body {
-  width: 100%;
+  /* html과 body는 원래 100%를 차지한다. 들어갈 필요가 없는 라인. */
+  /* width: 100%; */
   height: 100%;
 }
+
 /* adobe color 사이트에서 트렌디한 색상을 선정해보자 */
 body {
   font-family: "GmarketSansMedium";
@@ -51,24 +56,25 @@ body {
 }
 
 /* 메인 컨텐츠 */
-#contents {
+/* #contents {
+  /* 삭제되어도 변화가 없다. 삭제하도록
   display: flex;
   justify-content: center;
-}
+} */
 
 .wrapper {
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
+  /* 부모 스타일은 크기 조절이 딱히 의미가 없다. */
+  /* width: 100%;
+  height: 100%; */
   margin-top: 50px;
 }
 
+/* 제목 이미지 */
 .title {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 50px;
-  position: relative;
 }
 
 .title .clock_img {
@@ -83,7 +89,7 @@ body {
 
 .title_img img {
   width: 100%;
-  height: auto;
+  /* height: auto; */
 }
 
 .intro {
@@ -93,8 +99,17 @@ body {
   margin-top: 50px;
 }
 
+/* ✅ 중요 Tips!
+  - 폰트가 여러군데 사용되지 않고 아주 적은 부분에 사용될 경우에는,
+    이미지를 따서 넣는 것이 더 용량을 절약할 수 있다!
+
+  - 예를 들어 해당 사이트의 "OTEnjoystoriesBA" 폰트는 딱 두 태그에서 사용된다.
+  - 그러므로 해당 폰트를 다운로드(웹 폰트) 받아 활용하지 말고, 이미지를 따서 사용하자.
+  - 폰트에 비해 자원을 훨씬 더 좋게 사용할 수 있다.
+*/
 .intro .intro_saying {
   font-family: "OTEnjoystoriesBA";
+  /* 굳이 수정은 하지 않으나, 이미지로 변환하면 더 좋을 것. */
   font-size: 36px;
   color: #f5df4d;
   margin-bottom: 50px;
@@ -108,21 +123,20 @@ body {
   position: relative;
 }
 
-
 .intro .explain p {
   /* 따옴표 안으로 글자가 들어감 absolute */
-  position: absolute;  
+  position: absolute;
   font-size: 17px;
   line-height: 1.7;
 }
 
 .intro .explain span {
-  font-family: 'GmarketSansBold';
+  font-family: "GmarketSansBold";
   font-size: 20px;
 }
 
 .intro .quotes {
-  position: relative;
+  /* position: relative; */
   padding-top: 20px;
 }
 
@@ -144,29 +158,30 @@ body {
   margin-bottom: 20px;
 }
 
-.inputs input{
-  padding: 15px 20px 15px 20px; 
+.inputs input {
+  padding: 15px 20px 15px 20px;
   /* 패딩의 순서는 12시, 3시, 6시 9시다. 시계 방향으로 돌아감 */
   margin: 0 15px;
   border: none;
   border-radius: 10px;
   font-size: 20px;
-  font-family: 'GmarketSansMedium';
+  font-family: "GmarketSansMedium";
   width: 200px;
 }
 
 .inputs input::placeholder {
-  color: #BABCBE;
+  color: #babcbe;
 }
 
 /* 버튼 공통 스타일 */
 button {
-  display: flex;
+  /* 버튼 자체가 무엇인가를 정렬하지 않으므로 flex는 삭제해보자 */
+  /* display: flex; */
   align-items: center;
-  font-family: 'GmarketSansBold';
+  font-family: "GmarketSansBold";
   font-size: 20px;
-  color:#5b2386;
-  background-color: #FCEE21;
+  color: #5b2386;
+  background-color: #fcee21;
   border: none;
   border-radius: 30px;
   padding: 10px 40px;
@@ -186,7 +201,7 @@ button {
   position: relative;
 }
 
-.start .click_img{
+.start .click_img {
   position: absolute;
   /* 손가락의 위치가 버튼과 겹치지 않도록 이동시킨다. */
   right: -75px;
@@ -236,7 +251,7 @@ button {
 .result span {
   /* 해당 20px, 폰트 70px의 공간에 js의 결과값이 들어간다 */
   padding: 0 20px;
-  font-family: 'GmarketSansBold';
+  font-family: "GmarketSansBold";
   font-size: 70px;
 }
 
@@ -272,12 +287,12 @@ button {
   align-items: center;
   width: 600px;
   height: 600px;
-  background-color: #FFF;
+  background-color: #fff;
   border-radius: 20px;
 }
 
 #modal .cheer {
-  font-family: 'OTEnjoystoriesBA';
+  font-family: "OTEnjoystoriesBA";
   color: #5b2386;
   text-align: center;
 }
@@ -294,10 +309,10 @@ button {
   margin-bottom: 20px;
 }
 
-#modal .close_btn{
+#modal .close_btn {
   /* 박스에 그림자를 넣는 속성 */
   /* 요소 값 : x값, y값, 흐릿함, 확산정도, 색상(rgba) */
-  box-shadow: 0px 5px 20px 1px rgba(0,0,0,15%);
+  box-shadow: 0px 5px 20px 1px rgba(0, 0, 0, 15%);
   margin-bottom: 20px;
 }
 
@@ -326,6 +341,6 @@ button {
 #copyright span {
   font-size: 12px;
   line-height: 1.5;
-  color: #FCEE21;
+  color: #fcee21;
   text-decoration: underline;
 }
