--- a/projects/ToyProjects/koongkoongta/css/koongkoongta.css
+++ b/projects/ToyProjects/koongkoongta/css/koongkoongta.css
@@ -35,7 +35,7 @@ body {
   align-items: center;
   font-size: 20px;
   margin-bottom: 35px;
-  padding: 30px 30px 20px 30px;
+  padding: 30px 30px 10px 30px;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0px 15px 15px #3f454d3b;
@@ -172,6 +172,31 @@ button {
   background-color: #526df2;
   border: none;
   box-shadow: 0px 15px 15px #3f454d3b;
+}
+
+.start_btn:active {
+  transform: scale(0.95);
+}
+
+/* anounce */
+.announce {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.announce p {
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: center;
+  color: #0000004f;
+}
+
+/* playWindow */
+.playWindow {
+  display: none;
 }
 
 /* 저작권 */
