--- a/projects/ToyProjects/koongkoongta/css/koongkoongta.css
+++ b/projects/ToyProjects/koongkoongta/css/koongkoongta.css
@@ -223,30 +223,62 @@ button {
   margin-right: 5px;
 }
 
+.playTop {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #babcbe;
+}
+
+.playWindow_rule {
+  display: flex;
+  width: 200px;
+  height: 50px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  font-size: 14px;
+}
+
+.playWindow_rule p {
+  font-size: 14px;
+  font-family: "GMarketSansMedium";
+}
+
+.playWindow_rule p span {
+  font-size: 15px;
+  color: #ffffff;
+  font-family: "GMarketSansBold";
+}
+
 .playWindow_title {
-  display:flex;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  border-bottom: double 1px rgb(223, 223, 223);
+  padding-right: 30px;
+  border-right: double 1px rgb(223, 223, 223);
 }
 
 .playWindow_title p {
-    color: #4463fd;
-    font-family: "GMarketSansMedium";
-    font-size: 24px;
-    margin: 15px 0px 20px 0px;
+  color: #4463fd;
+  font-family: "GMarketSansMedium";
+  font-size: 24px;
 }
 
 .submit_btn {
   display: flex;
   align-items: center;
   font-family: "GMarketSansBold";
-  font-size: 14px;
-  background-color: #526df2;
-  color: #fff;
+  font-size: 12px;
+  background-color: transparent;
+  color: #526df2;
   border: 1px solid #526df2;
-  border-radius: 0px;
+  border-radius: 10px;
   padding: 5px 15px;
   cursor: pointer;
   word-break: keep-all;
@@ -257,24 +289,11 @@ button {
   /* 패딩의 순서는 12시, 3시, 6시 9시다. 시계 방향으로 돌아감 */
   margin: 0 10px;
   border: solid 1px #babcbe;
-  font-size: 15px;
+  font-size: 18px;
   font-family: "GmarketSansMedium";
-  width: 200px;
+  width: 240px;
   text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* 저작권 */
 #copyright {
