--- a/projects/ToyProjects/koongkoongta/css/animation.css
+++ b/projects/ToyProjects/koongkoongta/css/animation.css
@@ -32,23 +32,47 @@
   }
 }
 
+@keyframes upAndDown_min {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(0, 2px);
+  }
+  75% {
+    transform: translate(0, -2px);
+  }
+  100% {
+    transform: translate(0, 0px);
+  }
+}
+
 /* 흔들리는 애니메이션 */
 @keyframes shake {
-  10%, 90% {
+  10%,
+  90% {
     transform: translate3d(-1px, 0, 0);
   }
-  
-  20%, 80% {
+
+  20%,
+  80% {
     transform: translate3d(2px, 0, 0);
   }
 
-  30%, 50%, 70% {
+  30%,
+  50%,
+  70% {
     transform: translate3d(-4px, 0, 0);
   }
 
-  40%, 60% {
+  40%,
+  60% {
     transform: translate3d(4px, 0, 0);
   }
+}
 
-
-  
+@keyframes blink {
+  50% {
+    opacity: 30%;
+  }
+}
