--- a/projects/ToyProjects/koongkoongta/css/koongkoongta.css
+++ b/projects/ToyProjects/koongkoongta/css/koongkoongta.css
@@ -196,7 +196,7 @@ button {
 
 /* playWindow */
 .playWindow {
-  /* display: none; */
+  display: none;
   display: flex;
   flex-direction: column;
   align-items: center;
