--- a/projects/ToyProjects/koongkoongta/css/koongkoongta.css
+++ b/projects/ToyProjects/koongkoongta/css/koongkoongta.css
@@ -34,7 +34,7 @@ body {
   flex-direction: column;
   align-items: center;
   font-size: 20px;
-  margin-bottom: 35px;
+  margin-bottom: 25px;
   padding: 30px 30px 10px 30px;
   background-color: #ffffff;
   border-radius: 10px;
@@ -52,7 +52,7 @@ body {
   border-bottom: double 1px rgb(223, 223, 223);
 }
 .inputs_title p {
-  color: #4463fd;
+  color: #3f454d;
   font-family: "GMarketSansMedium";
   font-size: 24px;
   margin: 15px 0px 20px 0px;
@@ -75,8 +75,8 @@ body {
   border-radius: 10px;
   font-size: 20px;
   font-family: "GmarketSansMedium";
-  color: #2245f1;
-  width: 60px;
+  color: rgb(255, 88, 116);
+  width: 50px;
   text-align: center;
 }
 
@@ -135,8 +135,6 @@ body {
 
 /* 버튼 공통 스타일 */
 button {
-  display: flex;
-  align-items: center;
   font-family: "OTEnjoystoriesBA";
   font-size: 36px;
   background-color: transparent;
@@ -268,7 +266,11 @@ button {
   padding: 30px 0px 30px 0px;
 }
 /* 말풍선 부분 */
-.player1_ballon {
+.player1_balloon {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
   margin: 15px 0px 0px 0px;
   width: 160px;
@@ -277,7 +279,11 @@ button {
   border-radius: 10px;
   /* animation: upAndDown_min 0.5s infinite; */
 }
-.player2_ballon {
+.player2_balloon {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
   margin: 15px 0px 0px 0px;
   width: 160px;
@@ -288,7 +294,7 @@ button {
 }
 
 /* 말풍선 윗 꼬리 */
-.player1_ballon:after {
+.player1_balloon:after {
   border-top: 0px solid transparent;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
@@ -298,7 +304,7 @@ button {
   top: -10px;
   left: 68px;
 }
-.player2_ballon:after {
+.player2_balloon:after {
   border-top: 0px solid transparent;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
@@ -307,6 +313,15 @@ button {
   position: absolute;
   top: -10px;
   left: 68px;
+}
+
+/* 말풍선 내부 텍스트 */
+.player1_balloon_text,
+.player2_balloon_text {
+  color: #25282c;
+  font-family: "OTEnjoystoriesBA";
+  font-size: 26px;
+  font-weight: bold;
 }
 
 .player1_wrap,
@@ -322,13 +337,16 @@ button {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  padding-right: 3px;
   width: 25px;
   height: 25px;
   color: #3f454d;
   border-bottom: solid 2px;
   border-bottom-color: #919191;
-  font-size: 15px;
-  font-family: "GMarketSansMedium";
+  font-size: 16px;
+  font-style: italic;
+  font-family: sans-serif;
+  font-weight: bold;
 }
 .player1_name {
   background-color: #fff599;
@@ -380,6 +398,24 @@ button {
   margin-right: 5px;
 }
 
+.mainCommand .playerNumber {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  padding-right: 3px;
+  width: 17px;
+  height: 20px;
+  background-color: #fff599;
+  border-bottom: solid 2px #919191;
+  color: #3f454d;
+  font-style: italic;
+  text-align: center;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
 .mainCommand #submit_value {
   border-left-width: 0;
   border-right-width: 0;
@@ -402,16 +438,23 @@ button {
 }
 
 .mainCommand .submit_btn {
-  display: flex;
-  align-items: center;
-  font-family: "GMarketSansBold";
-  font-size: 12px;
-  color: #526df2;
-  border: none;
-  border-radius: 0px;
-  padding: 5px 15px;
+  font-family: "GMarketSansMedium";
+  padding: 3px 5px 3px 5px;
+  width: 100px;
+  height: 30px;
+  font-size: 14px;
+  border-radius: 30px;
   cursor: pointer;
   word-break: keep-all;
+  color: #fff;
+  background-color: #526df2;
+  border: none;
+}
+.mainCommand .submit_btn:hover {
+  animation: upAndDown_min 0.5s infinite;
+}
+.mainCommand .submit_btn:active {
+  transform: scale(0.95);
 }
 
 /* timeBar */
