--- a/projects/ToyProjects/koongkoongta/css/koongkoongta.css
+++ b/projects/ToyProjects/koongkoongta/css/koongkoongta.css
@@ -9,8 +9,8 @@
   --light-gray: #dfdfdf;
   --input-gray: #babcbe;
   --bgcolor: aliceblue;
-  --ballon-yellow:rgb(255, 245, 153);;
-  --ballon-redpink:pink;
+  --ballon-yellow: rgb(255, 245, 153);
+  --ballon-redpink: pink;
   /* size */
   --size-button: 60px;
   --size-thumbnail: 50px;
@@ -29,7 +29,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-flow: column;
-  width: 100%;  
+  width: 100%;
   height: 100%;
 }
 /* adobe color 사이트에서 트렌디한 색상을 선정해보자 */
@@ -73,17 +73,17 @@ body {
 }
 .titleName p {
   color: var(--redpink);
-  font-size: 100px;
+  font-size: 90px;
+}
+.titleName .blue {
+  color: var(--blue);
+  font-size: 90px;
 }
 .titleName p span {
   text-shadow: 0px 0px 5px #ffffff, 0px 5px 0px #fff;
   position: relative;
   top: 20px;
-  animation: bounce 0.3s ease infinite alternate;
-}
-.titleName .blue {
-  color: var(--blue);
-  font-size: 100px;
+  animation: bounce 1s ease infinite alternate;
 }
 .titleName p span:nth-child(2) {
   animation-delay: 0.1s;
